# sunburst_ml

./: .gitignore  Dockerfile.lambda  Dockerfile.server  Dockerfile.test  lambda.py  main.py  pyproject.toml  task-definition-server.json  test.json
data/: 20250211realtime_zone.csv
data/day_ahead_prices/: 20231103damlbmp_zone.csv  20231109damlbmp_zone.csv  20231111damlbmp_zone.csv  20231115damlbmp_zone.csv  20231116damlbmp_zone.csv  20231117damlbmp_zone.csv  20231119damlbmp_zone.csv  20231121damlbmp_zone.csv  20231123damlbmp_zone.csv  20231125damlbmp_zone.csv  20231127damlbmp_zone.csv  20231128damlbmp_zone.csv  20231201damlbmp_zone.csv  20231202damlbmp_zone.csv  20231203damlbmp_zone.csv  20231205damlbmp_zone.csv  20231207damlbmp_zone.csv  20231213damlbmp_zone.csv  20231215damlbmp_zone.csv  20231216damlbmp_zone.csv  20231218damlbmp_zone.csv  20231219damlbmp_zone.csv  20231222damlbmp_zone.csv  20231224damlbmp_zone.csv  20231225damlbmp_zone.csv  20231227damlbmp_zone.csv  20231228damlbmp_zone.csv  20231229damlbmp_zone.csv  20240101damlbmp_zone.csv  20240102damlbmp_zone.csv  20240103damlbmp_zone.csv  20240107damlbmp_zone.csv  20240109damlbmp_zone.csv  20240110damlbmp_zone.csv  20240113damlbmp_zone.csv  20240114damlbmp_zone.csv  20240118damlbmp_zone.csv  20240119damlbmp_zone.csv  20240122damlbmp_zone.csv  20240123damlbmp_zone.csv  (+209 more)
data/prices/: 20231103realtime_zone.csv  20231110realtime_zone.csv  20231112realtime_zone.csv  20231114realtime_zone.csv  (+232 more)
src/: get_data.py  lambda.py  nyiso.py  rag.py  server.py  test.py  test_model.py  train_lstm.py  train_model.py
(+1540 files in other folders)
