[project]
name = "sunburst-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Danny Sullivan",email = "dbsullivan23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "openai (>=1.65.2,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "src.server:start"
